<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fcfffe"
    tools:context="com.example.dotlun.demokhachhangdb.AddActivity">

    <android.support.v4.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarMain"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#cad0e1"
                app:title="Restaurant">

            </android.support.v7.widget.Toolbar>-->

                <ViewFlipper
                    android:id="@+id/Viewfliper"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"></ViewFlipper>
                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="#fbfeff"
                        android:orientation="vertical">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/edtTen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:hint="@string/hint_name" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edtPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:hint="@string/hint_phone" />
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:hint="@string/hint_email" />
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Content"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/edtNoidung"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|left"
                            android:layout_marginTop="10dp"
                            android:text="@string/hint_coffee"
                            android:inputType="textMultiLine"
                            android:lines="10"
                            android:maxLines="15"
                            android:minLines="5"
                            android:background="@drawable/editext_color1"
                            android:scrollbars="vertical"

                            />
                        <Button
                            android:id="@+id/btnAdd"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_corner"
                            android:text="Send" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>